feat(cart): improve concurrency safety, bulk processing, and cart maintenance
* DOMAIN:
  - `Cart.java`: Add checkout completion logic and strengthen cart state protection.
  - `CartItem.java`: Add an index to improve expiration query performance.
  - `CartRepository.java`: Add optimized fetching and version-controlled write operations.
  - `CartItemRepository.java`: Improve bulk update, deletion, and filtered fetching behavior.

* SERVICE:
  - `CartService.java`: Prevent concurrent write conflicts and safely complete checkout operations.
  - `CartMaintenanceService.java`: Use dynamic filters, bulk expiration processing, and batched notifications.

* SPECIFICATION:
  - `CartItemSpecification.java`: Fix the selected-item filter and split date filtering into reusable conditions.
  - `BaseSpecification.java`: Improve filter composition, null handling, and case-insensitive searching.

* EVENT:
  - `CartCheckoutRequestedEvent.java`: Make checkout event data immutable.
  - `CartItemExpiringEvent.java`: Remove the single-item expiration event.
  - `CartItemsExpiringEvent.java`: Add a bulk expiration event for efficient notification processing.

* CONFIGURATION:
  - `application.yml`: Fix the cart scheduler configuration namespace.